// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionExportModal should render 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-amqh1w"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transaction History
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Export your wallet's transaction history.
            </div>
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <form
                  class="mt-8"
                  data-testid="TransactionExportForm"
                >
                  <ul
                    class="css-slpw39"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex w-full flex-col pb-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Transactions
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <div>
                              <div
                                class="inline-flex w-full items-center space-x-3"
                                data-testid="ButtonGroup"
                                role="radiogroup"
                              >
                                <button
                                  aria-checked="true"
                                  aria-label="Incoming"
                                  class="css-12yryft"
                                  data-testid="ButtonGroupOption"
                                  role="radio"
                                  type="button"
                                >
                                  <div
                                    class="px-2"
                                  >
                                    Incoming
                                  </div>
                                </button>
                                <button
                                  aria-checked="false"
                                  aria-label="Outgoing"
                                  class="css-12yryft"
                                  data-testid="ButtonGroupOption"
                                  role="radio"
                                  type="button"
                                >
                                  <div
                                    class="px-2"
                                  >
                                    Outgoing
                                  </div>
                                </button>
                                <button
                                  aria-checked="false"
                                  aria-label="All"
                                  class="css-12yryft"
                                  data-testid="ButtonGroupOption"
                                  role="radio"
                                  type="button"
                                >
                                  <div
                                    class="px-2"
                                  >
                                    All
                                  </div>
                                </button>
                              </div>
                            </div>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col pt-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Date Range
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <fieldset
                              class="flex min-w-0 flex-col css-1bcidjh"
                            >
                              <div
                                class="static sm:relative"
                                data-testid="TransactionExportForm--daterange-options"
                              >
                                <span
                                  data-testid="dropdown__toggle"
                                >
                                  <button
                                    class="flex items-center space-x-2 font-semibold focus:outline-none w-full cursor-pointer justify-between space-x-4 overflow-hidden"
                                    data-testid="CollapseToggleButton"
                                    disabled=""
                                    type="button"
                                  >
                                    <span
                                      class="flex items-center space-x-1"
                                    >
                                      <div
                                        class="whitespace-nowrap leading-tight"
                                      >
                                        Month to Date
                                      </div>
                                    </span>
                                    <span
                                      class="css-5xpdfb"
                                    >
                                      <div
                                        class="p-1 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg>
                                          chevron-down-small.svg
                                        </svg>
                                      </div>
                                    </span>
                                  </button>
                                </span>
                              </div>
                            </fieldset>
                          </span>
                        </div>
                      </div>
                    </li>
                  </ul>
                  <div
                    class="mt-8 mb-4 text-lg font-semibold"
                  >
                    CSV Settings
                  </div>
                  <ul
                    class="css-slpw39"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex w-full flex-col pb-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Include Header Row
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-header-row"
                                name="includeHeaderRow"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col pt-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Delimiter
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <fieldset
                              class="flex min-w-0 flex-col css-1bcidjh"
                            >
                              <div
                                class="static sm:relative"
                                data-testid="TransactionExportForm--delimiter-options"
                              >
                                <span
                                  data-testid="dropdown__toggle"
                                >
                                  <button
                                    class="flex items-center space-x-2 font-semibold focus:outline-none w-full cursor-pointer justify-between space-x-4 overflow-hidden"
                                    data-testid="CollapseToggleButton"
                                    type="button"
                                  >
                                    <span
                                      class="flex items-center space-x-1"
                                    >
                                      Comma
                                      <span
                                        class="px-1 leading-tight text-theme-secondary-500 dark:text-theme-secondary-600"
                                      >
                                        (
                                      </span>
                                      ,
                                      <span
                                        class="leading-tight text-theme-secondary-500 dark:text-theme-secondary-600"
                                      >
                                        )
                                      </span>
                                    </span>
                                    <span
                                      class="css-e3wx3i"
                                    >
                                      <div
                                        class="p-1 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg>
                                          chevron-down-small.svg
                                        </svg>
                                      </div>
                                    </span>
                                  </button>
                                </span>
                              </div>
                            </fieldset>
                          </span>
                        </div>
                      </div>
                    </li>
                  </ul>
                  <div
                    class="mt-8 mb-4 text-lg font-semibold"
                  >
                    Columns
                  </div>
                  <ul
                    class="css-slpw39"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex w-full flex-col pb-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Transaction ID
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-tx-id"
                                name="includeTransactionId"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col py-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Transaction Date
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-date"
                                name="includeDate"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col py-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Sender / Recipient
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-sender-recipient"
                                name="includeSenderRecipient"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col pt-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Crypto Amount
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-crypto-amount"
                                name="includeCryptoAmount"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                  </ul>
                  <div
                    class="css-1tkbsa1"
                  >
                    <button
                      class="css-1jhy6v9"
                      data-testid="TransactionExportForm__cancel-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="css-1bx0hyc"
                      data-testid="TransactionExport__submit-button"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Export
                      </div>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionExportModal should render error status 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-amqh1w"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transaction History
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Export your wallet's transaction history.
            </div>
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div>
                  <svg
                    class="my-6 mx-auto hidden h-32 w-2/4 md:block"
                  >
                    error-banner-light-green.svg
                  </svg>
                  <div
                    class="flex flex-col overflow-hidden rounded-xl my-6"
                  >
                    <div
                      class="css-ic0qlc"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          circle-cross.svg
                        </svg>
                      </div>
                      <span>
                        Error
                      </span>
                    </div>
                    <div
                      class="css-6o9bco"
                    />
                  </div>
                  <div
                    class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
                  >
                    <div
                      class="flex items-center justify-between space-x-4"
                    >
                      <div
                        class="flex flex-grow items-center space-x-4"
                      >
                        <div
                          class="css-1atxdzc"
                          height="40"
                          width="40"
                        >
                          <svg>
                            extension-csv.svg
                          </svg>
                        </div>
                        <div
                          class="w-0 flex-1 truncate font-semibold"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </div>
                      </div>
                      <div
                        class="flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-theme-danger-200 text-theme-danger-500"
                      >
                        <div
                          class="css-15txs7d"
                          height="10"
                          width="10"
                        >
                          <svg>
                            cross-small.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1tkbsa1"
                  >
                    <button
                      class="css-1jhy6v9"
                      data-testid="TransactionExportError__close-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Close
                      </div>
                    </button>
                    <button
                      class="css-1bx0hyc"
                      data-testid="TransactionExportError__retry-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Retry
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionExportModal should render progress status 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-amqh1w"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transaction History
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Export your wallet's transaction history.
            </div>
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <form
                  class="mt-8"
                  data-testid="TransactionExportForm"
                >
                  <ul
                    class="css-slpw39"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex w-full flex-col pb-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Transactions
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <div>
                              <div
                                class="inline-flex w-full items-center space-x-3"
                                data-testid="ButtonGroup"
                                role="radiogroup"
                              >
                                <button
                                  aria-checked="true"
                                  aria-label="Incoming"
                                  class="css-12yryft"
                                  data-testid="ButtonGroupOption"
                                  role="radio"
                                  type="button"
                                >
                                  <div
                                    class="px-2"
                                  >
                                    Incoming
                                  </div>
                                </button>
                                <button
                                  aria-checked="false"
                                  aria-label="Outgoing"
                                  class="css-12yryft"
                                  data-testid="ButtonGroupOption"
                                  role="radio"
                                  type="button"
                                >
                                  <div
                                    class="px-2"
                                  >
                                    Outgoing
                                  </div>
                                </button>
                                <button
                                  aria-checked="false"
                                  aria-label="All"
                                  class="css-12yryft"
                                  data-testid="ButtonGroupOption"
                                  role="radio"
                                  type="button"
                                >
                                  <div
                                    class="px-2"
                                  >
                                    All
                                  </div>
                                </button>
                              </div>
                            </div>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col pt-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Date Range
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <fieldset
                              class="flex min-w-0 flex-col css-1bcidjh"
                            >
                              <div
                                class="static sm:relative"
                                data-testid="TransactionExportForm--daterange-options"
                              >
                                <span
                                  data-testid="dropdown__toggle"
                                >
                                  <button
                                    class="flex items-center space-x-2 font-semibold focus:outline-none w-full cursor-pointer justify-between space-x-4 overflow-hidden"
                                    data-testid="CollapseToggleButton"
                                    disabled=""
                                    type="button"
                                  >
                                    <span
                                      class="flex items-center space-x-1"
                                    >
                                      <div
                                        class="whitespace-nowrap leading-tight"
                                      >
                                        Month to Date
                                      </div>
                                    </span>
                                    <span
                                      class="css-5xpdfb"
                                    >
                                      <div
                                        class="p-1 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg>
                                          chevron-down-small.svg
                                        </svg>
                                      </div>
                                    </span>
                                  </button>
                                </span>
                              </div>
                            </fieldset>
                          </span>
                        </div>
                      </div>
                    </li>
                  </ul>
                  <div
                    class="mt-8 mb-4 text-lg font-semibold"
                  >
                    CSV Settings
                  </div>
                  <ul
                    class="css-slpw39"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex w-full flex-col pb-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Include Header Row
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-header-row"
                                name="includeHeaderRow"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col pt-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Delimiter
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <fieldset
                              class="flex min-w-0 flex-col css-1bcidjh"
                            >
                              <div
                                class="static sm:relative"
                                data-testid="TransactionExportForm--delimiter-options"
                              >
                                <span
                                  data-testid="dropdown__toggle"
                                >
                                  <button
                                    class="flex items-center space-x-2 font-semibold focus:outline-none w-full cursor-pointer justify-between space-x-4 overflow-hidden"
                                    data-testid="CollapseToggleButton"
                                    type="button"
                                  >
                                    <span
                                      class="flex items-center space-x-1"
                                    >
                                      Comma
                                      <span
                                        class="px-1 leading-tight text-theme-secondary-500 dark:text-theme-secondary-600"
                                      >
                                        (
                                      </span>
                                      ,
                                      <span
                                        class="leading-tight text-theme-secondary-500 dark:text-theme-secondary-600"
                                      >
                                        )
                                      </span>
                                    </span>
                                    <span
                                      class="css-e3wx3i"
                                    >
                                      <div
                                        class="p-1 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg>
                                          chevron-down-small.svg
                                        </svg>
                                      </div>
                                    </span>
                                  </button>
                                </span>
                              </div>
                            </fieldset>
                          </span>
                        </div>
                      </div>
                    </li>
                  </ul>
                  <div
                    class="mt-8 mb-4 text-lg font-semibold"
                  >
                    Columns
                  </div>
                  <ul
                    class="css-slpw39"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex w-full flex-col pb-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Transaction ID
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-tx-id"
                                name="includeTransactionId"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col py-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Transaction Date
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-date"
                                name="includeDate"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col py-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Sender / Recipient
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-sender-recipient"
                                name="includeSenderRecipient"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex w-full flex-col pt-4"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex w-full flex-col space-y-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Crypto Amount
                            </span>
                          </div>
                        </div>
                        <div>
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <label
                              class="css-xklln0"
                            >
                              <input
                                checked=""
                                class="css-1r71f0z toggle-input"
                                data-testid="TransactionExportForm__toggle-include-crypto-amount"
                                name="includeCryptoAmount"
                                type="checkbox"
                              />
                              <div
                                class="css-7lwhds toggle-handle"
                              >
                                <span
                                  class="css-1fmiyrr"
                                />
                              </div>
                            </label>
                          </span>
                        </div>
                      </div>
                    </li>
                  </ul>
                  <div
                    class="css-1tkbsa1"
                  >
                    <button
                      class="css-1jhy6v9"
                      data-testid="TransactionExportForm__cancel-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="css-1bx0hyc"
                      data-testid="TransactionExport__submit-button"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Export
                      </div>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionExportModal should render success and download file 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-amqh1w"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transaction History
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Export your wallet's transaction history.
            </div>
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div>
                  <div
                    class="flex flex-col overflow-hidden rounded-xl my-6"
                  >
                    <div
                      class="css-1dwg83m"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          circle-check-mark.svg
                        </svg>
                      </div>
                      <span>
                        Success
                      </span>
                    </div>
                    <div
                      class="css-k5jr4t"
                    >
                      The transaction history is now ready, download it below.
                    </div>
                  </div>
                  <div
                    class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
                  >
                    <div
                      class="flex items-center justify-between space-x-4"
                    >
                      <div
                        class="flex flex-grow items-center space-x-4"
                      >
                        <div
                          class="css-1atxdzc"
                          height="40"
                          width="40"
                        >
                          <svg>
                            extension-csv.svg
                          </svg>
                        </div>
                        <div
                          class="w-0 flex-1 truncate font-semibold"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </div>
                      </div>
                      <div
                        class="flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-theme-success-200 text-theme-success-500"
                      >
                        <div
                          class="css-15txs7d"
                          height="10"
                          width="10"
                        >
                          <svg>
                            check-mark-small.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1tkbsa1"
                  >
                    <button
                      class="css-1jhy6v9"
                      data-testid="TransactionExportSuccess__close-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="css-1bx0hyc"
                      data-testid="TransactionExportSuccess__download-button"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Download
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionExportModal should render success and stay open if download fails 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-amqh1w"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transaction History
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Export your wallet's transaction history.
            </div>
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div>
                  <div
                    class="flex flex-col overflow-hidden rounded-xl my-6"
                  >
                    <div
                      class="css-1dwg83m"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          circle-check-mark.svg
                        </svg>
                      </div>
                      <span>
                        Success
                      </span>
                    </div>
                    <div
                      class="css-k5jr4t"
                    >
                      The transaction history is now ready, download it below.
                    </div>
                  </div>
                  <div
                    class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
                  >
                    <div
                      class="flex items-center justify-between space-x-4"
                    >
                      <div
                        class="flex flex-grow items-center space-x-4"
                      >
                        <div
                          class="css-1atxdzc"
                          height="40"
                          width="40"
                        >
                          <svg>
                            extension-csv.svg
                          </svg>
                        </div>
                        <div
                          class="w-0 flex-1 truncate font-semibold"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </div>
                      </div>
                      <div
                        class="flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-theme-success-200 text-theme-success-500"
                      >
                        <div
                          class="css-15txs7d"
                          height="10"
                          width="10"
                        >
                          <svg>
                            check-mark-small.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1tkbsa1"
                  >
                    <button
                      class="css-1jhy6v9"
                      data-testid="TransactionExportSuccess__close-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="css-1bx0hyc"
                      data-testid="TransactionExportSuccess__download-button"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Download
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionExportModal should render success status 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-amqh1w"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transaction History
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Export your wallet's transaction history.
            </div>
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div>
                  <div
                    class="flex flex-col overflow-hidden rounded-xl my-6"
                  >
                    <div
                      class="css-1dwg83m"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          circle-check-mark.svg
                        </svg>
                      </div>
                      <span>
                        Success
                      </span>
                    </div>
                    <div
                      class="css-k5jr4t"
                    >
                      The transaction history is now ready, download it below.
                    </div>
                  </div>
                  <div
                    class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
                  >
                    <div
                      class="flex items-center justify-between space-x-4"
                    >
                      <div
                        class="flex flex-grow items-center space-x-4"
                      >
                        <div
                          class="css-1atxdzc"
                          height="40"
                          width="40"
                        >
                          <svg>
                            extension-csv.svg
                          </svg>
                        </div>
                        <div
                          class="w-0 flex-1 truncate font-semibold"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </div>
                      </div>
                      <div
                        class="flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-theme-success-200 text-theme-success-500"
                      >
                        <div
                          class="css-15txs7d"
                          height="10"
                          width="10"
                        >
                          <svg>
                            check-mark-small.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1tkbsa1"
                  >
                    <button
                      class="css-1jhy6v9"
                      data-testid="TransactionExportSuccess__close-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="css-1bx0hyc"
                      data-testid="TransactionExportSuccess__download-button"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Download
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
